<resources>
    <string name="app_name">SIGCSE Volunteer</string>

    <string name="hello_world">Welcome!"</string>
    <string name="action_settings">Settings</string>
    <string name="task">Your Tasks</string>
    <string name="option">Options</string>
    <string name="signOut">Sign Out</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="main_page">Home</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_first_section">Notifications</string>
    <string name="title_checkbox_preference">Allow Notifications</string>
    <string name="default_checkbox_preference">Allow Notifications</string>
    <string name="title_edittext_preference">Home</string>
    <string name="summary_edittext_preference">Home</string>
    <string name="dialog_title_edittext_preference">Home</string>
    <string name="title_list_preference">Notification Times</string>
    <string name="notification_title">Event starting soon!</string>
    <string name="dialog_title_list_preference">Alarm Timer</string>
    <string name="title_checkbox2_preference">Vibrate</string>
    <string name="title_checkbox3_preference">Ring</string>
</resources>
