<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/title_first_section">
        <CheckBoxPreference android:key="checkbox_preference" android:title="@string/title_checkbox_preference" android:defaultValue="@string/default_checkbox_preference"/>
        <ListPreference android:key="list_preference" android:title="@string/title_list_preference" android:dialogTitle="@string/dialog_title_list_preference" android:dependency="checkbox_preference" android:entries="@array/entries_list_preference" android:entryValues="@array/entryvalues_list_preference"/>
        <CheckBoxPreference android:key="checkbox_preference" android:title="@string/title_checkbox2_preference" android:dependency="checkbox_preference"/>
        <CheckBoxPreference android:key="checkbox_preference" android:title="@string/title_checkbox3_preference" android:dependency="checkbox_preference"/>
    </PreferenceCategory>
</PreferenceScreen>